--- a/.env
+++ b/.env
@@ -1,19 +1,19 @@
 APP_NAME=Designsowl
-APP_ENV=local
+APP_ENV=dev
 APP_KEY=base64:UTzdqxaoXwFsNgGH3nWZk0AzMtv2ahjq9mV1E8Wr8hg=
 APP_DEBUG=true
-APP_URL=http://design-app.test/
+APP_URL=https://digital-logic-35pbe.ondigitalocean.app/
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
+DB_HOST=app-7b0b7cbb-71c6-4310-9533-75ee532fc94e-do-user-11167490-0.b.db.ondigitalocean.com
+DB_PORT=25060
 DB_DATABASE=designsowl
-DB_USERNAME=root
-DB_PASSWORD=
+DB_USERNAME=designsowl
+DB_PASSWORD=pddYUvezk0RIci4P
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
