--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 APP_NAME=Designsowl
-APP_ENV=dev
+APP_ENV=development
 APP_KEY=base64:UTzdqxaoXwFsNgGH3nWZk0AzMtv2ahjq9mV1E8Wr8hg=
 APP_DEBUG=true
 APP_URL=https://digital-logic-35pbe.ondigitalocean.app/
