--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "laravel/ui": "^3.4",
         "league/flysystem-aws-s3-v3": "^3.2",
         "maatwebsite/excel": "^3.1",
-        "spatie/laravel-permission": "^5.5"
+        "spatie/laravel-permission": "^5.5",
+        "spatie/laravel-webhook-client": "^3.1"
     },
     "require-dev": {
         "spatie/laravel-ignition": "^1.0",
@@ -35,7 +36,7 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "Tests\\": "tests/"
+            "Spatie\\WebhookClient\\Tests\\": "tests"
         }
     },
     "scripts": {
@@ -51,11 +52,14 @@
         ],
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
-        ]
+        ],
+        "test": "vendor/bin/phpunit"
     },
     "extra": {
         "laravel": {
-            "dont-discover": []
+            "providers": [
+                "Spatie\\WebhookClient\\WebhookClientServiceProvider"
+            ]
         }
     },
     "config": {
